<resources>
    <string name="app_name">TimeSheet</string>

    <string name="menu">"Главный экран"</string>
    <string name="list_employees">"Список сотрудников"</string>
    <string name="add_employee">"Добавить сотрудника"</string>
    <string name="edit_fragment_title">"Редактировать профиль"</string>
    <string name="employee_profile">"Профиль сотрудника"</string>
    <string name="button_add">"Добавить"</string>
    <string name="button_save">"Сохранить"</string>
    <string name="button_employees">"Сотрудники"</string>
    <string name="button_timeSheet">"Табель"</string>
    <string name="add_new_item">Добавить новый элемент</string>
    <string name="delete_question">Вы уверены что хотите удалить данные этого сотрудника?</string>

    <string name="add_last_name">Фамилия:</string>
    <string name="add_first_name">Имя:</string>
    <string name="add_patronymic">Отчество:</string>
    <string name="add_position">Должность:</string>


    <string name="save_employee">"Добавить нового сотрудника?"</string>
    <string name="delete_employee">Удалить</string>
    <string name="change_employee">Изменить</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_message">"Добавить нового сотрудника?"</string>
    <string name="dialog_answer_yes">Да</string>
    <string name="dialog_answer_no">Нет</string>

    <string name="error_name">"Поле ввода имени не может быть пустым"</string>
    <string name="error_age">"Введите корректный год рождения"</string>
</resources>