<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.timesheet.ui.fragment.StartFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_employeeListFragment"
            app:destination="@id/employeeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/employeeListFragment"
        android:name="com.example.timesheet.ui.fragment.EmployeeListFragment"
        android:label="@string/list_employees"
        tools:layout="@layout/fragment_employee_list">
        <action
            android:id="@+id/action_employeeListFragment_to_employeeDetailFragment"
            app:destination="@id/employeeDetailFragment" />
        <action
            android:id="@+id/action_employeeListFragment_to_addEmployeeFragment"
            app:destination="@id/addEmployeeFragment" />
    </fragment>
    <fragment
        android:id="@+id/employeeDetailFragment"
        android:name="com.example.timesheet.ui.fragment.EmployeeDetailFragment"
        android:label="@string/employee_profile"
        tools:layout="@layout/fragment_employee_detail">
        <argument
            android:name="employee_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_employeeDetailFragment_to_addEmployeeFragment"
            app:destination="@id/addEmployeeFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEmployeeFragment"
        android:name="com.example.timesheet.ui.fragment.AddEmployeeFragment"
        android:label="@string/add_employee"
        tools:layout="@layout/fragment_add_employee">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="employee_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_addEmployeeFragment_to_employeeListFragment4"
            app:destination="@id/employeeListFragment" />
    </fragment>
</navigation>