<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/last_name_tx"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/add_last_name"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_name_tx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/add_first_name"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/last_name_tx"
        app:layout_constraintTop_toBottomOf="@+id/last_name_tx" />

    <TextView
        android:id="@+id/patronymic_tx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_patronymic"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/first_name_tx"
        app:layout_constraintTop_toBottomOf="@+id/first_name_tx" />

    <TextView
        android:id="@+id/position_tx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_position"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/patronymic_tx"
        app:layout_constraintTop_toBottomOf="@+id/patronymic_tx" />


    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/last_name_tx"
        app:layout_constraintStart_toEndOf="@+id/last_name_tx"
        app:layout_constraintTop_toTopOf="@+id/last_name_tx" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/first_name_tx"
        app:layout_constraintStart_toEndOf="@+id/first_name_tx"
        app:layout_constraintTop_toTopOf="@+id/first_name_tx" />

    <TextView
        android:id="@+id/patronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/patronymic_tx"
        app:layout_constraintStart_toEndOf="@+id/patronymic_tx"
        app:layout_constraintTop_toTopOf="@+id/patronymic_tx" />

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/position_tx"
        app:layout_constraintStart_toEndOf="@+id/position_tx"
        app:layout_constraintTop_toTopOf="@+id/position_tx" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/change_employee"
        android:src="@drawable/ic_edit"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_delete"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintTop_toTopOf="@+id/button_delete"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete_employee"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_tx"
        app:tint="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>